<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/product_name_label"
            style="@style/prduct_detail_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name_label" />

        <EditText
            android:id="@+id/product_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nextFocusDown="@+id/price_edit" />

        <TextView
            android:id="@+id/price_label"
            style="@style/prduct_detail_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_label" />

        <EditText
            android:id="@+id/price_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="6" />

        <TextView
            android:id="@+id/quantity_label"
            style="@style/prduct_detail_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8">

            <ImageButton
                android:id="@+id/decrease_quantity_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_remove_black_24dp" />

            <EditText
                android:id="@+id/quantity_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4" />

            <ImageButton
                android:id="@+id/increase_quantity_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_add_black_24dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/supplier_name_label"
            style="@style/prduct_detail_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_label" />

        <EditText
            android:id="@+id/supplier_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/supplier_name_hint_text"
            android:inputType="text" />

        <TextView
            android:id="@+id/supplier_phone_label"
            style="@style/prduct_detail_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_phone_label" />

        <EditText
            android:id="@+id/supplier_phone_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/supplier_phone_hint_text"
            android:inputType="phone" />

        <TextView
            android:id="@+id/supplier_email_label"
            style="@style/prduct_detail_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_email_label" />

        <EditText
            android:id="@+id/supplier_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email_address"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/image_label"
            style="@style/prduct_detail_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_label" />

        <Button
            android:id="@+id/select_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_image" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="180dp" />

    </LinearLayout>

</ScrollView>
